<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_property_view_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.evolvingdeveloper.simplecashflowcalculator.CashFlowCalculation"
    android:orientation="vertical">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_scroll_input_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:scrollbars="none"
    android:paddingBottom="100dp" >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cash_flow_calculation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:showIn="@layout/activity_cash_flow_calculation">

    <TextView
        android:id="@+id/property_value_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/property_value_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/property_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/property_value_label"
        />

    <TextView
        android:id="@+id/estimated_rent_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/property_value"
        android:text="@string/estimated_rent_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/estimated_rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/estimated_rent_label"
        />

    <TextView
        android:id="@+id/mortgage_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/estimated_rent"
        android:text="@string/mortgage_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/mortgage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/mortgage_label"
        />

    <TextView
        android:id="@+id/property_management_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mortgage"
        android:text="@string/property_management_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/property_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/property_management_label"
        />

    <TextView
        android:id="@+id/insurance_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/property_management"
        android:text="@string/insurance_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/insurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/insurance_label"
        />

    <TextView
        android:id="@+id/property_tax_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/insurance"
        android:text="@string/property_tax_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/property_tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/property_tax_label"
        />

    <TextView
        android:id="@+id/vacancy_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/property_tax"
        android:textAlignment="center"
        android:text="@string/vacancy_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/vacancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/vacancy_label"
        />

    <TextView
        android:id="@+id/repair_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/vacancy"
        android:text="@string/repair_label"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/repair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@+id/repair_label"
        />


</RelativeLayout>
</LinearLayout>
</ScrollView>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cash_flow_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@id/new_scroll_input_wrapper"
    android:background="@drawable/textview_border"
    >

    <TextView
        android:id="@+id/cash_flow_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/cash_flow_label"
        android:background="#ffffff"
        />

    <TextView
        android:id="@+id/cash_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cash_flow_label"
        android:textSize="25sp"
        android:gravity="right"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cash_flow_label"
        android:onClick="resetAllFields"
        android:text="Reset"
        />

    <Button
        android:id="@+id/save_new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reset_button"
        android:layout_below="@id/cash_flow"
        android:layout_alignParentRight="true"
        android:onClick="savePropertyDialog"
        android:text="Save"/>

</RelativeLayout>
</RelativeLayout>